# VibeOJ

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SPEC.md  dependence.md  docker-compose.yml  nginx.conf
.claude/: settings.json
data/: seed.yaml
docs/: api.md
scripts/: init.sql
src/: main.cc
src/auth/: jwt.cc  jwt.h  middleware.cc  middleware.h  password.cc  password.h
src/common/: log.cc  log.h
src/config/: config.cc  config.h  seed_importer.cc  seed_importer.h  seeder.cc  seeder.h
src/db/: connection_pool.cc  connection_pool.h  dao.cc  dao.h
src/handler/: admin_handler.cc  admin_handler.h  auth_handler.cc  auth_handler.h  problem_handler.cc  problem_handler.h  submit_handler.cc  submit_handler.h
src/judge/: compiler.cc  compiler.h  runner.cc  runner.h  sandbox.cc  sandbox.h
src/model/: problem.h  refresh_token.h  submission.h  user.h
static/: index.html
static/css/: style.css
static/js/: api.js  utils.js
tests/: test_admin.cc  test_auth.cc  test_db.cc  test_judge.cc  test_log.cc  test_problem.cc  test_seed_importer.cc  test_seeder.cc  test_server.cc  test_submit.cc
tests/python_api_tests/: conftest.py  pytest.ini  requirements.txt  run_tests.sh  test_admin.py  test_auth.py  test_frontend_js.py  test_health.py  test_problems.py  test_submissions.py
tests/python_api_tests/utils/: __init__.py  api_client.py
